--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,6 @@ main: me.unleqitq.commandframework.CommandFramework
 api-version: 1.18
 load: STARTUP
 authors: [UnleqitQ]
+softdepend:
+  - SuperVanish
+  - PremiumVanish
